# simple_chat_server

./: README.md  pyproject.toml  setup.cfg
simple_chat_server/: main.py
